tests/typecheck/no_skolem_info/T13499.hs
{-# LANGUAGE StaticPointers #-}

import Data.Typeable (Typeable)
import GHC.StaticPtr (StaticPtr)

f :: Typeable a => StaticPtr (a -> a)
f = static (\a -> _)

main :: IO ()
main = return ()
